fix misalignment

--- a/themes/qgrid/source/css/index.scss
+++ b/themes/qgrid/source/css/index.scss
@@ -165,7 +165,8 @@
 			overflow: hidden;
 
 			img {
-				border-radius: 4px;			}
+				border-radius: 4px;			
+			}
 		}
 
 		&-text {
